--- a/htmls/jupiter.html
+++ b/htmls/jupiter.html
@@ -18,13 +18,21 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/solar-system.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/solar-system.css" />
+    <link
+      rel="shortcut icon"
+      href="../images/favicon.png"
+      type="image/x-icon"
+    />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +50,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -111,7 +119,7 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img6.webp)"
+          style="background-image: url(../images/Solar-System/img6.webp)"
         >
           <div class="content-2">
             <div class="content">
@@ -206,69 +214,69 @@
                   </button>
                 </div>
                 <div class="ad">
-                  <video autoplay muted loop src="/medias/1.mp4"></video>
+                  <video autoplay muted loop src="../medias/1.mp4"></video>
                 </div>
                 <h1>Thông Tin Liên Quan</h1>
                 <ul class="option">
                   <li>
                     <a href="/htmls/solar-system.html"
                       ><img
-                        src="/images/Solar-System/solar-system.jpg"
+                        src="../images/Solar-System/solar-system.jpg"
                         alt=""
                       />Hệ Mặt Trời</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/sun.html"
-                      ><img src="/images/Solar-System/img1.jpg" alt="" />Mặt
+                      ><img src="../images/Solar-System/img1.jpg" alt="" />Mặt
                       Trời</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/Mercury.html"
-                      ><img src="/images/Solar-System/img2.jpg" alt="" />Thủy
+                      ><img src="../images/Solar-System/img2.jpg" alt="" />Thủy
                       Tinh</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/venus.html"
-                      ><img src="/images/Solar-System/img3.jpg" alt="" />Kim
+                      ><img src="../images/Solar-System/img3.jpg" alt="" />Kim
                       Tinh</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/earth.html"
-                      ><img src="/images/Solar-System/img4.png" alt="" />Trái
+                      ><img src="../images/Solar-System/img4.png" alt="" />Trái
                       Đất</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/mars.html"
-                      ><img src="/images/Solar-System/img5.jpg" alt="" />Hỏa
+                      ><img src="../images/Solar-System/img5.jpg" alt="" />Hỏa
                       Tinh</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/jupiter.html"
-                      ><img src="/images/Solar-System/img6.webp" alt="" />Mộc
+                      ><img src="../images/Solar-System/img6.webp" alt="" />Mộc
                       Tinh</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/saturn.html"
-                      ><img src="/images/Solar-System/img7.jpg" alt="" />Thổ
+                      ><img src="../images/Solar-System/img7.jpg" alt="" />Thổ
                       Tinh</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/uranus.html"
-                      ><img src="/images/Solar-System/img8.jpg" alt="" />Thiên
+                      ><img src="../images/Solar-System/img8.jpg" alt="" />Thiên
                       Vương Tinh</a
                     >
                   </li>
                   <li>
                     <a href="/htmls/neptune.html"
-                      ><img src="/images/Solar-System/img9.jpg" alt="" />Hải
+                      ><img src="../images/Solar-System/img9.jpg" alt="" />Hải
                       Vương Tinh</a
                     >
                   </li>
@@ -306,7 +314,10 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img
+                  src="../images/footer/post16-copyright-840x473.jpg"
+                  alt=""
+                />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
