--- a/htmls/news1.html
+++ b/htmls/news1.html
@@ -18,13 +18,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/news.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +46,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -111,7 +115,7 @@
       <main>
         <div
           class="news-intro"
-          style="background-image: url(/images/news/img1.jpg)"
+          style="background-image: url(../images/news/img1.jpg)"
         >
           <div class="content-2">
             <div class="content">
@@ -122,10 +126,7 @@
               </h1>
               <div class="bot">
                 <div class="author">
-                  <img
-                    src="/images/news/author/Tran-Dinh-Manh-Huy.jpg"
-                    alt=""
-                  />
+                  <img src="../images/news/img2.1.webp" alt="" />
                   <div>
                     <h5>Tác Giả</h5>
                     <h4>Jay Levine</h4>
@@ -171,7 +172,7 @@
               cân bằng hoàn hảo. Các nhiếp ảnh gia của NASA Armstrong làm điều
               này mỗi ngày bay.
             </p>
-            <img src="/images/news/img1.jpg" alt="img1" />
+            <img src="../images/news/img1.jpg" alt="img1" />
             <label for="img1"
               >Phi công nghiên cứu của NASA Nils Larson và nhiếp ảnh gia Jim
               Ross hoàn thành các màn nhào lộn trên không tại Trung tâm Nghiên
@@ -189,7 +190,7 @@
               và nhà khoa học, nhưng việc chụp ảnh và quay video cho phép chúng
               tôi chia sẻ hình ảnh với thế giới.
             </p>
-            <img src="/images/news/james-ross.webp" alt="james-ross" />
+            <img src="../images/news/james-ross.webp" alt="james-ross" />
             <label for="james-ross"
               >Jim Ross, người phụ trách ảnh tại Trung tâm Nghiên cứu Chuyến bay
               Armstrong của NASA ở Edwards, California, đã chụp một bức ảnh về
@@ -209,20 +210,21 @@
               và trực thăng.
             </p>
             <p>
-              NASA previously recognized Ross for his work with the agency’s
-              Public Service Medal and the Exceptional Public Achievement Medal.
-              NASA also made a photo book of his work titled, “NASA Photo One,”
-              which highlights 100 photos of his career. He also won the Best of
-              the Best award from the Aviation Week & Space Technology photo
-              contest in 2001. His work has appeared in many publications,
-              including Aviation Week & Space Technology, National Geographic,
-              and Air & Space Smithsonian.
+              NASA trước đây đã công nhận Ross vì công việc của anh với Huân
+              chương Dịch vụ Công cộng của cơ quan và Huân chương Thành tựu Công
+              Đặc biệt. NASA cũng đã thực hiện một cuốn sách ảnh về tác phẩm của
+              ông có tựa đề “NASA Photo One”, trong đó nêu bật 100 bức ảnh về sự
+              nghiệp của ông. Anh cũng đã giành được giải Best of the Best từ
+              cuộc thi ảnh Tuần lễ Hàng không & Công nghệ Vũ trụ năm 2001. Tác
+              phẩm của anh đã xuất hiện trên nhiều ấn phẩm, bao gồm Tuần lễ Hàng
+              không & Công nghệ Vũ trụ, National Geographic và Air & Space
+              Smithsonian.
             </p>
             <div class="comments">
               <h2>Bình Luận</h2>
               <div class="cmt">
                 <div class="accout accout1">
-                  <img src="/images/user/hanhan.jpg" alt="" />
+                  <img src="../images/user/hanhan.jpg" alt="" />
                   <div>
                     <h3>Han Han</h3>
                     <h4>Người dùng</h4>
@@ -242,7 +244,7 @@
               </div>
               <div class="cmt">
                 <div class="accout">
-                  <img src="/images/user/longle.jpg" alt="" />
+                  <img src="../images/user/longle.jpg" alt="" />
                   <div>
                     <h3>Long Lee</h3>
                     <h4>Người dùng</h4>
@@ -271,14 +273,14 @@
               <div class="more-news">
                 <div class="new">
                   <a href="/htmls/news2.html">
-                    <img src="/images/news/img2.jpg" alt="" />
+                    <img src="../images/news/img2.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>Hubble phát hiện một thiên hà ẩn trong đám mây đen</h2>
                   </a>
                 </div>
                 <div class="new">
                   <a href="/htmls/news3.html">
-                    <img src="/images/news/img3.jpg" alt="" />
+                    <img src="../images/news/img3.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Nhật thực toàn phần duy nhất năm 2024 dài gần 5 phút
@@ -315,7 +317,7 @@
                 </ul>
               </div>
               <div class="ad">
-                <video autoplay muted loop src="/medias/1.mp4"></video>
+                <video autoplay muted loop src="../medias/1.mp4"></video>
               </div>
             </div>
           </div>
@@ -349,7 +351,7 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img src="../images/footer/post16-copyright-840x473.jpg" alt="" />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
