--- a/htmls/news2.html
+++ b/htmls/news2.html
@@ -18,13 +18,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/news.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +46,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -110,7 +114,7 @@
       <main>
         <div
           class="news-intro"
-          style="background-image: url(/images/news/img2.jpg)"
+          style="background-image: url(../images/news/img2.jpg)"
         >
           <div class="content-2">
             <div class="content">
@@ -118,7 +122,7 @@
               <h1>Hubble phát hiện một thiên hà ẩn trong đám mây đen</h1>
               <div class="bot">
                 <div class="author">
-                  <img src="/images/news/img2.2.webp" alt="" />
+                  <img src="../images/news/img2.2.webp" alt="" />
                   <div>
                     <h5>Tác Giả</h5>
                     <h4>Nhóm sứ mệnh Hubble của NASA</h4>
@@ -152,7 +156,7 @@
               yếu nghiêng về phía chúng ta, giúp các nhà thiên văn học có cái
               nhìn khá rõ về hàng tỷ ngôi sao của nó.
             </p>
-            <img src="/images/news/img2.1.webp" alt="img1" />
+            <img src="../images/news/img2.1.webp" alt="img1" />
             <label for="img1"
               >Hình ảnh Hubble này có thiên hà xoắn ốc IC 4633. <br />
               ESA/Hubble & NASA, J. Dalcanton, Khảo sát năng lượng
@@ -190,7 +194,7 @@
               <div class="cmt">
                 <div class="accout accout1">
                   <img
-                    src="/images/user/miha.jpg"
+                    src="../images/user/miha.jpg"
                     alt=""
                     style="object-position: 0 -13px"
                   />
@@ -214,7 +218,7 @@
               </div>
               <div class="cmt">
                 <div class="accout">
-                  <img src="/images/user/tanzit.jpg" alt="" />
+                  <img src="../images/user/tanzit.jpg" alt="" />
                   <div>
                     <h3>Đăng Việt</h3>
                     <h4>Người dùng</h4>
@@ -244,14 +248,14 @@
               <div class="more-news">
                 <div class="new">
                   <a href="/htmls/news4.html">
-                    <img src="/images/news/img4.webp" alt="" />
+                    <img src="../images/news/img4.webp" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>TESS của NASA quay trở lại hoạt động khoa học</h2>
                   </a>
                 </div>
                 <div class="new">
                   <a href="/htmls/news3.html">
-                    <img src="/images/news/img3.jpg" alt="" />
+                    <img src="../images/news/img3.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Nhật thực toàn phần duy nhất năm 2024 dài gần 5 phút
@@ -288,7 +292,7 @@
                 </ul>
               </div>
               <div class="ad">
-                <video autoplay muted loop src="/medias/2.mp4"></video>
+                <video autoplay muted loop src="../medias/2.mp4"></video>
               </div>
             </div>
           </div>
@@ -322,7 +326,7 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img src="../images/footer/post16-copyright-840x473.jpg" alt="" />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
