--- a/htmls/news3.html
+++ b/htmls/news3.html
@@ -18,13 +18,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/news.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +46,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -111,7 +115,7 @@
       <main>
         <div
           class="news-intro"
-          style="background-image: url(/images/news/img3.jpg)"
+          style="background-image: url(../images/news/img3.jpg)"
         >
           <div class="content-2">
             <div class="content">
@@ -119,7 +123,7 @@
               <h1>Nhật thực toàn phần duy nhất năm 2024 dài gần 5 phút</h1>
               <div class="bot">
                 <div class="author">
-                  <img src="/images/news/img3.1.jpg" alt="" />
+                  <img src="../images/news/img3.1.jpg" alt="" />
                   <div>
                     <h5>Tác Giả</h5>
                     <h4>Thu Thảo</h4>
@@ -147,7 +151,7 @@
               Nhật thực toàn phần sẽ xuất hiện từ vùng duyên hải Thái Bình Dương
               của Mexico.
             </h2>
-            <img src="/images/news/img3.2.jpg" alt="" />
+            <img src="../images/news/img3.2.jpg" alt="" />
             <label for="img1"
               >Nhật thực toàn phần quan sát từ Madras, bang Oregon, Mỹ, ngày
               21/8/2017. Ảnh: NASA/Aubrey Gemignani</label
@@ -215,7 +219,7 @@
               <div class="cmt">
                 <div class="accout accout1">
                   <img
-                    src="/images/user/hanhan.jpg"
+                    src="../images/user/hanhan.jpg"
                     alt=""
                     style="object-position: 0 -13px"
                   />
@@ -238,7 +242,7 @@
               </div>
               <div class="cmt">
                 <div class="accout">
-                  <img src="/images/user/khoazo.jpg" alt="" />
+                  <img src="../images/user/khoazo.jpg" alt="" />
                   <div>
                     <h3>Khoa Võ</h3>
                     <h4>Người dùng</h4>
@@ -274,14 +278,14 @@
               <div class="more-news">
                 <div class="new">
                   <a href="/htmls/news4.html">
-                    <img src="/images/news/img4.webp" alt="" />
+                    <img src="../images/news/img4.webp" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>TESS của NASA quay trở lại hoạt động khoa học</h2>
                   </a>
                 </div>
                 <div class="new">
                   <a href="/htmls/news5.html">
-                    <img src="/images/news/img5.jpg" alt="" />
+                    <img src="../images/news/img5.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Cơ hội quan sát nguyệt thực một phần thực toàn phần duy
@@ -319,7 +323,7 @@
                 </ul>
               </div>
               <div class="ad">
-                <video autoplay muted loop src="/medias/3.mp4"></video>
+                <video autoplay muted loop src="../medias/3.mp4"></video>
               </div>
             </div>
           </div>
@@ -353,7 +357,7 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img src="../images/footer/post16-copyright-840x473.jpg" alt="" />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
