--- a/htmls/news4.html
+++ b/htmls/news4.html
@@ -18,13 +18,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/news.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +46,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -110,7 +114,7 @@
       <main>
         <div
           class="news-intro"
-          style="background-image: url(/images/news/img4.webp)"
+          style="background-image: url(../images/news/img4.webp)"
         >
           <div class="content-2">
             <div class="content">
@@ -118,7 +122,7 @@
               <h1>TESS của NASA quay trở lại hoạt động khoa học</h1>
               <div class="bot">
                 <div class="author">
-                  <img src="/images/news/img4.1.jpg" alt="" />
+                  <img src="../images/news/img4.1.jpg" alt="" />
                   <div>
                     <h5>Tác Giả</h5>
                     <h4>Jeanette Kazmierczak</h4>
@@ -150,7 +154,7 @@
               tháng 4 sau một khoảng thời gian ngừng hoạt động riêng biệt vào
               đầu tháng đó.
             </p>
-            <img src="/images/news/img4.2.jpg" alt="" />
+            <img src="../images/news/img4.2.jpg" alt="" />
             <label for="img1"
               >Vệ tinh khảo sát ngoại hành tinh quá cảnh ( TESS ) là kính viễn
               vọng không gian dành cho chương trình Explorer của NASA , được
@@ -224,7 +228,7 @@
               đen xé nhỏ ngôi sao và các dao động của sao . Đọc thêm về những
               khám phá TESS tại nasa.gov/tess .
             </p>
-            <img src="/images/news/img4.3.jpg" alt="" />
+            <img src="../images/news/img4.3.jpg" alt="" />
             <label for="img1"
               >Vệ tinh khảo sát ngoại hành tinh quá cảnh ( TESS ) là kính viễn
               vọng không gian dành cho chương trình Explorer của NASA , được
@@ -259,7 +263,7 @@
               <div class="cmt">
                 <div class="accout accout1">
                   <img
-                    src="/images/user/kiu-oanh.jpg"
+                    src="../images/user/kiu-oanh.jpg"
                     alt=""
                     style="object-position: 0 -13px"
                   />
@@ -282,7 +286,7 @@
               </div>
               <div class="cmt">
                 <div class="accout">
-                  <img src="/images/user/khoazo.jpg" alt="" />
+                  <img src="../images/user/khoazo.jpg" alt="" />
                   <div>
                     <h3>Khoa Võ</h3>
                     <h4>Người dùng</h4>
@@ -311,7 +315,7 @@
               <div class="more-news">
                 <div class="new">
                   <a href="/htmls/news6.html">
-                    <img src="/images/news/img6.jpg" alt="" />
+                    <img src="../images/news/img6.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Sự phá hủy hành tinh trong các hệ có thể khá phổ biến
@@ -320,7 +324,7 @@
                 </div>
                 <div class="new">
                   <a href="/htmls/news5.html">
-                    <img src="/images/news/img5.jpg" alt="" />
+                    <img src="../images/news/img5.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Cơ hội quan sát nguyệt thực một phần thực toàn phần duy
@@ -358,7 +362,7 @@
                 </ul>
               </div>
               <div class="ad">
-                <video autoplay muted loop src="/medias/4.mp4"></video>
+                <video autoplay muted loop src="../medias/4.mp4"></video>
               </div>
             </div>
           </div>
@@ -392,7 +396,7 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img src="../images/footer/post16-copyright-840x473.jpg" alt="" />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
