--- a/htmls/news6.html
+++ b/htmls/news6.html
@@ -18,13 +18,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/news.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +46,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -96,7 +100,8 @@
                     class="fa-solid fa-magnifying-glass"
                     style="color: #ffffff"
                   ></i>
-                </a>              </button>
+                </a>
+              </button>
 
               <a href=""><p class="lien-he">Liên Hệ</p></a>
               <i
@@ -110,7 +115,7 @@
       <main>
         <div
           class="news-intro"
-          style="background-image: url(/images/news/img6.jpg)"
+          style="background-image: url(../images/news/img6.jpg)"
         >
           <div class="content-2">
             <div class="content">
@@ -118,7 +123,7 @@
               <h1>Sự phá hủy hành tinh trong các có thể khá phổ biến</h1>
               <div class="bot">
                 <div class="author">
-                  <img src="/images/news/img4.1.jpg" alt="" />
+                  <img src="../images/news/img4.1.jpg" alt="" />
                   <div>
                     <h5>Tác Giả</h5>
                     <h4>Bryan</h4>
@@ -154,7 +159,7 @@
               hiện, trong đó một vật thể có thể bị loại bỏ một cách ngẫu nhiên
               vào không gian hoặc rơi vào sao chủ của nó.
             </p>
-            <img src="/images/news/img6.2.webp" alt="" />
+            <img src="../images/news/img6.2.webp" alt="" />
             <label for="img1"
               >Hình ảnh minh họa sự nổ tung của các hành tinh
               <br />
@@ -203,7 +208,7 @@
               <div class="cmt">
                 <div class="accout accout1">
                   <img
-                    src="/images/user/kiu-oanh.jpg"
+                    src="../images/user/kiu-oanh.jpg"
                     alt=""
                     style="object-position: 0 -13px"
                   />
@@ -227,7 +232,7 @@
               </div>
               <div class="cmt">
                 <div class="accout">
-                  <img src="/images/user/khoazo.jpg" alt="" />
+                  <img src="../images/user/khoazo.jpg" alt="" />
                   <div>
                     <h3>Khoa Võ</h3>
                     <h4>Người dùng</h4>
@@ -260,7 +265,7 @@
               <div class="more-news">
                 <div class="new">
                   <a href="/htmls/news1.html">
-                    <img src="/images/news/img1.jpg" alt="" />
+                    <img src="../images/news/img1.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Nhiếp ảnh gia của NASA được vinh danh nhờ hình ảnh đảo
@@ -270,7 +275,7 @@
                 </div>
                 <div class="new">
                   <a href="/htmls/news7.html">
-                    <img src="/images/news/img7.jpg" alt="" />
+                    <img src="../images/news/img7.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Đài quan sát ELT có thể nhìn thấy những gì từ hành tinh
@@ -308,7 +313,7 @@
                 </ul>
               </div>
               <div class="ad">
-                <video autoplay muted loop src="/medias/.mp4"></video>
+                <video autoplay muted loop src="../medias/.mp4"></video>
               </div>
             </div>
           </div>
@@ -342,7 +347,7 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img src="../images/footer/post16-copyright-840x473.jpg" alt="" />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
