--- a/htmls/news7.html
+++ b/htmls/news7.html
@@ -18,13 +18,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reponsive.css" />
-    <link rel="stylesheet" href="/css/news.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/reponsive.css" />
+    <link rel="stylesheet" href="../css/news.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
     <div id="wrapper">
+      <a href="#wrapper" class="back-home zoom"
+        ><i class="fa-solid fa-house"></i
+      ></a>
       <div>
         <header>
           <div class="full-body">
@@ -42,7 +46,7 @@
                 <div class="center">
                   <ul class="main-menu">
                     <li>
-                      <a class="navigation" href="/index.html">
+                      <a class="navigation" href="../index.html">
                         <i class="fa-solid fa-house" style="color: #ffffff"></i>
                         <label for="">Trang Chủ</label>
                       </a>
@@ -110,7 +114,7 @@
       <main>
         <div
           class="news-intro"
-          style="background-image: url(/images/news/img7.jpg)"
+          style="background-image: url(../images/news/img7.jpg)"
         >
           <div class="content-2">
             <div class="content">
@@ -121,7 +125,7 @@
               </h1>
               <div class="bot">
                 <div class="author">
-                  <img src="/images/news/img4.1.jpg" alt="" />
+                  <img src="../images/news/img4.1.jpg" alt="" />
                   <div>
                     <h5>Tác Giả</h5>
                     <h4>Bryan</h4>
@@ -180,7 +184,7 @@
               nước, carbon dioxide và các phân tử khác trong khí quyển của nhiều
               ngoại hành tinh.
             </p>
-            <img src="/images/news/img7.2.jpg" alt="" />
+            <img src="../images/news/img7.2.jpg" alt="" />
             <label for="img1">
               Sao Proxima Centauri
               <br />
@@ -236,7 +240,7 @@
               <div class="cmt">
                 <div class="accout accout1">
                   <img
-                    src="/images/user/kiu-oanh.jpg"
+                    src="../images/user/kiu-oanh.jpg"
                     alt=""
                     style="object-position: 0 -13px"
                   />
@@ -260,7 +264,7 @@
               </div>
               <div class="cmt">
                 <div class="accout">
-                  <img src="/images/user/khoazo.jpg" alt="" />
+                  <img src="../images/user/khoazo.jpg" alt="" />
                   <div>
                     <h3>Khoa Võ</h3>
                     <h4>Người dùng</h4>
@@ -293,7 +297,7 @@
               <div class="more-news">
                 <div class="new">
                   <a href="/htmls/news1.html">
-                    <img src="/images/news/img1.jpg" alt="" />
+                    <img src="../images/news/img1.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>
                       Nhiếp ảnh gia của NASA được vinh danh nhờ hình ảnh đảo
@@ -303,7 +307,7 @@
                 </div>
                 <div class="new">
                   <a href="/htmls/news2.html">
-                    <img src="/images/news/img2.jpg" alt="" />
+                    <img src="../images/news/img2.jpg" alt="" />
                     <h3>Tin Nổi Bật</h3>
                     <h2>Hubble phát hiện một thiên hà ẩn trong đám mây đen</h2>
                   </a>
@@ -338,7 +342,7 @@
                 </ul>
               </div>
               <div class="ad">
-                <video autoplay muted loop src="/medias/3.mp4"></video>
+                <video autoplay muted loop src="../medias/3.mp4"></video>
               </div>
             </div>
           </div>
@@ -372,7 +376,7 @@
           <div class="content-2">
             <div class="about-Manh-Huy">
               <div class="about-top">
-                <img src="/images/footer/post16-copyright-840x473.jpg" alt="" />
+                <img src="../images/footer/post16-copyright-840x473.jpg" alt="" />
                 <div class="about-information">
                   <h1>Trần Đình Mạnh Huy</h1>
                   <h2>Lớp : 23T2</h2>
